<resources>
    <!-- Action Bar -->
    <string name="app_name" translatable="false">RetoFinal</string>
    <string name="option_filter">Filter</string>
    <string name="option_profile">Profile</string>
    <string name="option_logout">Logout</string>
    <string name="option_config">Settings</string>
    <string name="option_about">About</string>
    <!-- Inicio -->
    <string name="connectionError">Database connection error!</string>
    <string name="errorTitle">Error</string>
    <string name="buttonOk">Ok</string>
    <!-- Confirmación de salida -->
    <string name="exitTitle">Exit</string>
    <string name="exitMessage">Are you sure you want to exit App?</string>
    <!-- Register and Login -->
    <string name="user_profile_title">User</string>
    <string name="hint_dni">DNI</string>
    <string name="hint_firstname">First Name</string>
    <string name="hint_lastname">Last Name</string>
    <string name="hint_username">Username</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_conf">Confirm password</string>
    <string name="hint_tel">Telephone</string>
    <string name="user_dont_exist">Incorrect credentials</string>
    <string name="login_fill_all">You must fill in all the fields</string>
    <string name="go_register_text">Don\'t have an account?</string>
    <string name="go_register_link">Sign up</string>
    <string name="btn_login">Login</string>
    <string name="btn_sign_up">Sign up</string>
    <string name="empty_dni">You must enter a dni</string>
    <string name="incorrect_dni">You must enter a valid dni</string>
    <string name="empty_firstname">You must enter a name</string>
    <string name="empty_lastname">You must enter a lastname</string>
    <string name="empty_email">You must enter an email</string>
    <string name="incorrect_email">You must enter a valid email</string>
    <string name="empty_password">You must enter a password</string>
    <string name="empty_password2">You must enter a password confirmation</string>
    <string name="empty_tel">You must enter a telephone</string>
    <string name="incorrect_tel">You must enter a valid phone number</string>
    <string name="password_confirm_error">Passwords do not match</string>
    <string name="user_exists">User with that dni or email already exists</string>
    <string name="new_user_success">New user created</string>
    <string name="new_user_error">An error has ocurred. The new user could not be created.</string>
    <!-- Reserva -->
    <string name="hint_fechaEntrada">Fecha de entrada</string>
    <string name="hint_fechaSalida">Fecha de salida</string>
    <string name="hint_numPersonas">Numero de personas</string>
    <string name="new_reserva_success">reservation completed</string>
    <string name="new_reserva_error">An error has ocurred. The reservation could not be completed.</string>
    <string name="new_reserva_aloj_error">An error has ocurred. The lodging doesn\'t exist.</string>
    <string name="new_reserva_complete_error">The lodging is complete for selected dates</string>
    <string name="new_reserva_no_people">You must enter a number for people</string>
    <!-- User Profile -->
    <string name="btn_edit">Edit</string>
    <string name="text_user_delete">User account Deleted</string>
    <string name="text_user_no_delete">User account could not be deleted</string>
    <string name="dialog_user_delete_title">Delete user</string>
    <string name="dialog_user_delete">Are you sure you want to delete this user?</string>
    <string name="edit_user_success">User saved</string>
    <string name="edit_user_error">An error has ocurred. The user could not be saved.</string>
    <string name="edit_user_pass">Change Password</string>
    <string name="old_pass">Old Password</string>
    <string name="new_pass">New Password</string>
    <string name="empty_old_pass">You must enter an old password</string>
    <string name="empty_new_pass">You must enter a new password</string>
    <string name="same_pass">New password must be different from old password</string>
    <string name="wrong_old_pass">Incorrect old password</string>
    <string name="edit_pass_success">Password changed</string>
    <string name="edit_pass_error">An error has ocurred. The password could not be updated.</string>
    <string name="dialog_confirm">Confirm</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="btn_save_task">Save</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_cancel_task">Cancel</string>
    <string name="title_reservations">Reservations</string>
    <string name="reserva_list_nombre">Lodging</string>
    <string name="reserva_list_fecha">Date</string>
    <!-- lodging List -->
    <string name="alojamiento_list_show">Show:</string>
    <string name="btn_new_alojamiento">New lodging</string>
    <string name="no_alojamientos">There are no lodging created</string>
    <string name="text_alojamiento_name">Name</string>
    <!-- lodging Details -->
    <string name="text_alojamiento_loc">Location</string>
    <string name="text_alojamiento_type">Type</string>
    <string name="text_alojamiento_desc">Description</string>
    <string name="text_alojamiento_details">More details</string>
    <string name="text_alojamiento_img">lodging image</string>
    <string name="btn_reservar">Reservation</string>
    <string name="btn_mapa">See on map</string>
    <string name="list_empty1">We are sorry, there are not lodgings to show.</string>
    <string name="list_empty2">Please try changing your filter criteria.</string>
    <string name="text_alojamiento_no_done">lodging could not be marked as done</string>
    <string name="developer">This app has been developed by Laura Moreno Gonzalez.</string>
    <!-- Mapas -->
    <string name="no_lodging_in_radio">No lodgings to show in that distance</string>
    <!-- Filtros -->
    <string name="filters_title">Filter by</string>
    <string name="territory">Territory</string>
    <string name="municipality">Municipality</string>
    <string name="lodging_type">Lodging type</string>
    <string name="capacity">Capacity</string>
    <string name="max">Max.</string>
    <string name="extras">Extras</string>
    <string name="resturant">Restaurant</string>
    <string name="shop">Shop</string>
    <string name="caravan">Caravan</string>
    <!-- About -->
    <string name="contact">You can send any suggestion or bug report to laura.morenogo@elorrieta-errekamari.com</string>
    <string name="version">Version: 1.0</string>
    <string name="release_date">Release date: 24/11/2019</string>
    <string name="settings_title">Information to show in the lodgings</string>
    <!-- Settings -->
    <string name="settings_desc">Description</string>
    <string name="settings_card">Card (Small / Big)</string>
    <string name="title_activity_mapa_alojamiento">Localización</string>
    <!-- Settings -->
    <string name="dialog_map_title">Search by proximity</string>
    <!-- Reservation Details -->
    <string name="reservation_details_title">Reservation</string>
    <string name="reservation_persons">Persons</string>
</resources>
