<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/filter"
        android:icon="@mipmap/filter_list_white_48dp"
        android:title="@string/option_filter"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/userProfile"
        android:icon="@mipmap/baseline_perm_identity_white_48"
        android:title="@string/option_profile"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/logout"
        android:title="@string/option_logout" />
    <item
        android:id="@+id/config"
        android:title="@string/option_config"
        app:showAsAction="never" />
    <item
        android:id="@+id/about"
        android:title="@string/option_about"
        app:showAsAction="never" />
</menu>