<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvAlojRsv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/hint_dni"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/lblAlojRsv"
            app:layout_constraintTop_toTopOf="@+id/lblAlojRsv" />

        <TextView
            android:id="@+id/tvFechEntradaRsv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:text="@string/hint_firstname"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvAlojRsv"
            app:layout_constraintTop_toBottomOf="@+id/tvAlojRsv"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tvFechSalidaRsv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:text="@string/hint_lastname"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/tvNumPersRsv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvFechEntradaRsv"
            app:layout_constraintTop_toBottomOf="@+id/tvFechEntradaRsv" />

        <TextView
            android:id="@+id/tvNumPersRsv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:text="@string/hint_email"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@+id/tvFechSalidaRsv"
            app:layout_constraintTop_toBottomOf="@+id/tvFechSalidaRsv" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingLeft="24dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/reservation_details_title"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/lblAlojRsv"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/reserva_list_nombre"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/textView11"
            app:layout_constraintTop_toBottomOf="@+id/imagenRsv" />

        <TextView
            android:id="@+id/lblFechaEntrada"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/hint_fechaEntrada"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/lblAlojRsv"
            app:layout_constraintTop_toTopOf="@+id/tvFechEntradaRsv" />

        <TextView
            android:id="@+id/lblFechaSalida"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/hint_fechaSalida"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/lblFechaEntrada"
            app:layout_constraintTop_toTopOf="@+id/tvFechSalidaRsv" />

        <TextView
            android:id="@+id/lblPersonas"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/reservation_persons"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/lblFechaSalida"
            app:layout_constraintTop_toTopOf="@+id/tvNumPersRsv" />

        <ImageView
            android:id="@+id/imagenRsv"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11"
            tools:srcCompat="@tools:sample/avatars" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
