<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="24dp"
    android:background="?android:attr/selectableItemBackground">

    <ImageView
        android:id="@+id/image"
        android:layout_width="340dp"
        android:layout_height="200dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:background="#7C7373"
        android:contentDescription="@string/text_alojamiento_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="340dp"
        android:layout_height="35dp"
        android:background="#801D1A1A"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/text_alojamiento_name"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvLoc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/text_alojamiento_loc"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tvType"
        app:layout_constraintStart_toStartOf="@+id/tvName"
        app:layout_constraintTop_toBottomOf="@+id/tvName" />

    <TextView
        android:id="@+id/tvType"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        android:drawablePadding="5dp"
        android:gravity="right"
        android:paddingRight="10dp"
        android:text="@string/text_alojamiento_type"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvLoc"
        app:layout_constraintEnd_toEndOf="@+id/tvName"
        app:layout_constraintStart_toEndOf="@+id/tvLoc"
        app:layout_constraintTop_toBottomOf="@+id/tvName" />

    <TextView
        android:id="@+id/tvDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/text_alojamiento_desc"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/tvType"
        app:layout_constraintStart_toStartOf="@+id/tvLoc"
        app:layout_constraintTop_toBottomOf="@+id/tvLoc" />

</androidx.constraintlayout.widget.ConstraintLayout>

