<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="24dp"
    android:background="?android:attr/selectableItemBackground">

    <ImageView
        android:id="@+id/image"
        android:layout_width="120dp"
        android:layout_height="106dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:adjustViewBounds="true"
        android:background="#7C7373"
        android:contentDescription="@string/text_alojamiento_img"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/text_alojamiento_name"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image"
        app:layout_constraintTop_toTopOf="@+id/image" />

    <TextView
        android:id="@+id/tvLoc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawablePadding="5dp"
        android:paddingLeft="10dp"
        android:text="@string/text_alojamiento_loc"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tvName"
        app:layout_constraintStart_toStartOf="@+id/tvName"
        app:layout_constraintTop_toBottomOf="@+id/tvName" />

    <TextView
        android:id="@+id/tvType"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:drawablePadding="5dp"
        android:paddingLeft="10dp"
        android:text="@string/text_alojamiento_type"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/image"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/tvLoc"
        app:layout_constraintTop_toBottomOf="@+id/tvLoc" />

    <TextView
        android:id="@+id/tvDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/text_alojamiento_desc"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/tvLoc"
        app:layout_constraintStart_toStartOf="@+id/image"
        app:layout_constraintTop_toBottomOf="@+id/tvType" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="24dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/txtCapac"
        app:layout_constraintEnd_toStartOf="@+id/txtCapac"
        app:layout_constraintTop_toTopOf="@+id/txtCapac"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@mipmap/baseline_face_black_48dp" />

    <TextView
        android:id="@+id/txtCapac"
        android:layout_width="48dp"
        android:layout_height="0dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="#"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvType"
        app:layout_constraintEnd_toEndOf="@+id/tvLoc"
        app:layout_constraintTop_toTopOf="@+id/tvType" />

</androidx.constraintlayout.widget.ConstraintLayout>

